Adicionei responsividade e Js na pagina

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./src/css/fontes.css">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
 </head>
 
 <body>
@@ -213,6 +214,7 @@
                 alt="seta avançar"></button>
     </main>
     <footer></footer>
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
